@@ -13,6 +13,7 @@
 *The World Map Alpha setting should properly change Opacity, it was working the opposite of how it was intended before. 100% Opacity means the frame is fully faded away now.
 *Add currency information to the bags datatext tooltip.
 *UIScale must be changed by at least 1% in order to recieve a UIScale popup warning to reload.
+*Chat Timestamps should now all have brackets around them, and be colored gray.
 
 [b]Fixes[/b]
 *The Reputation bar should have its width correctly set on login.
